tests/fail/protect_hidden.py
from __future__ import absolute_import
try:
    __import__('.hidden', level=0)
except ImportError:
    pass
else:
    raise Exception
